recipie -> recipe, name correction
